Removed javascript bug and arabic cation changes

--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "timelineJS/timelineJS-rails", "timelineJS/locale/#{@options[:language]}" %>
+<%= javascript_include_tag "timelineJS/timelineJS-rails","timelineJS/storyjs-embed-cdn", "timelineJS/locale/#{@options[:language]}" %>
 <%= stylesheet_link_tag "timelineJS/timelineJS-rails" %>
 <div id="timeline-embed" style="width: 100%; height: 600px;"></div>
 <script type="text/javascript">
